--- a/.travis.yml
+++ b/.travis.yml
@@ -2,17 +2,21 @@ sudo: false
 
 language: perl
 perl:
+  - "5.30"
   - "5.28"
-  - "5.26"
-  - "5.24"
-  - "5.20"
-  - "5.18"
 
 before_install:
+  - perlbrew lib create @build
+  - perlbrew use @build
   - cpanm --notest Test2::Harness
 
 script:
-  yath --qvf
+  - yath --qvf
+  - cpanm --notest App::ModuleBuildTiny
+  - mbtiny dist
+  - perlbrew lib create @installation
+  - perlbrew use @installation
+  - cpanm *.tar.gz
 
 notifications:
   irc:
